# sos-data-api

./: Procfile  README.md  pyproject.toml  requirements.txt
src/: run.py
src/sos_data_api/app/: __init__.py
src/sos_data_api/app/config/: app_config.py
src/sos_data_api/app/models/entity/: technology_entity.py
src/sos_data_api/app/models/repository/: technology_base.py
src/sos_data_api/app/resources/collections/: technology_data.py
src/sos_data_api/app/resources/repository/: technology_repo.py
src/sos_data_api/app/web/resources/: technology.py
