[tool.poetry]
name = "sos_data_api"
version = "0.1.0"
description = ""
authors = ["Alan Bandeira <alan.p.bandeira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-restful = "^0.3.8"
python-dotenv = "^0.14.0"
pymongo = "^3.11.0"
mongoengine = "^0.20.0"
flask-mongoengine = "^0.9.5"
dnspython = "^2.0.0"
flask-cors = "^3.0.9"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
